package gestiondetransportepublico.Constantes;

/**
 *
 * @author ivan
 */
public enum CategoriaLicencia {
    A1,
    A2,
    B1,
    B2,
    B3,
    C1,
    C2,
    C3
}
