package gestiondetransportepublico.Constantes;

/**
 *
 * @author ivan
 */
public enum DiasDeOperacion {
    LUNES,
    MARTES,
    MIERCOLES,
    JUEVES,
    VIERNES,
    SABADO,
    DOMINGO
}
