package gestiondetransportepublico.Constantes;

/**
 *
 * @author ivan
 */
public enum EstadoBoleto {
    USADO,
    PENDIENTE,
    CANCELADO
}
