package gestiondetransportepublico.Constantes;

/**
 *
 * @author ivan
 */
public enum MetodoPago {
    EFECTIVO,
    TARJETA,
    PREPAGO
}
