package gestiondetransportepublico.Constantes;

/**
 *
 * @author ivan
 */
public enum TipoBoleto {
    NORMAL,
    ESTUDIANTE,
    TERCERA_EDAD,
    ESPECIAL
}
