package gestiondetransportepublico.Constantes;

/**
 *
 * @author ivan
 */
public enum TipoServicio {
    URBANO,
    INTERURBANO,
    EXPRESO,
    NOCTURNO
}
