package gestiondetransportepublico.Constantes;

/**
 *
 * @author ivan
 */
public enum TurnoAsignado {
    MANANA,
    TARDE,
    NOCHE
}
